Fix Github link and prefetch links/

--- a/index.html
+++ b/index.html
@@ -239,12 +239,14 @@
                 <!-- Socials -->
                 <div class="Footer-List">
                     <!-- Footer prefetches -->
-                    <link rel="prefetch" href="https://discord.gg/WePT9v2CmQ"/>
-                    <link rel="prefetch" href="https://www.facebook.com/Qplay-Software-706121699827477"/>
+                    <link rel="prefetch" href="https://github.com/QTechCommunity"/>
+                    <link rel="prefetch" href="https://github.com/QTechCommunity/RandomThingz"/>
+                    <link rel="prefetch" href="https://github.com/QTechCommunity/MasterWeapons"/>
+                    <link rel="prefetch" href="https://github.com/QTechCommunity/NotepadImproved"/>
 
                     <!-- Footer links -->
                     <a href="https://discord.gg/WePT9v2CmQ" target="_blank" class="Footer-Link">Discord</a>
-                    <a href="https://github.com/Qboi123" class="Footer-Link">GitHub</a>
+                    <a href="https://github.com/QTechCommunity" class="Footer-Link">GitHub</a>
                     <a href="https://www.facebook.com/Qplay-Software-706121699827477" target="_blank" class="Footer-Link">Facebook</a>
                 </div>
             </div>
