Fix image drag issue.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div id="Start" class="Section Center">
-            <img src="data/img/arrow.svg" alt="" class="Arrow"/>
+            <img src="data/img/arrow.svg" alt="" class="Arrow" style="-webkit-user-drag: none"/>
             <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" class="HeroContent">
                 <h1 class="Heading3">
                     Ultreon Team
@@ -233,7 +233,7 @@
         <div class="Footer">
             <div class="Wrap">
                 <!-- Team Name -->
-                <div><h4>Ultreon Team</h4></div>
+                <div><h4 class="BrandFont">Ultreon Team</h4></div>
                 <p class="Footer-Copyright">© Copyright 2021 - Ultreon Team - All rights reserved.</p>
 
                 <!-- Socials -->
