--- a/index.html
+++ b/index.html
@@ -74,22 +74,12 @@
                             </a>
                             <div data-hover="" data-delay="0" class="Dropdown w-dropdown" style="">
                                 <div class="navlink w-nav-link w-dropdown-toggle" id="w-dropdown-toggle-0" aria-controls="w-dropdown-list-0" aria-haspopup="menu" aria-expanded="false" role="button" tabindex="0">
-                                    <div class="text-block-3">
-                                        Dropdown
-                                    </div>
-                                    <div class="icon-2 w-icon-dropdown-toggle" aria-hidden="true">
-
-                                    </div>
+                                    <div class="text-block-3">Other Downloads</div>
+                                    <div class="icon-2 w-icon-dropdown-toggle" aria-hidden="true"></div>
                                 </div>
                                 <nav class="w-dropdown-list" id="w-dropdown-list-0" aria-labelledby="w-dropdown-toggle-0">
-                                    <a href="#" class="w-dropdown-link" tabindex="0">
-                                        Link 1
-                                    </a>
-                                    <a href="#" class="w-dropdown-link" tabindex="0">
-                                        Link 2
-                                    </a>
-                                    <a href="#" class="w-dropdown-link" tabindex="0">
-                                        Link 3
+                                    <a href="./Downloads/BubbleBlaster.html" class="w-dropdown-link" tabindex="0">
+                                        Bubble Blaster
                                     </a>
                                 </nav>
                             </div>
@@ -103,9 +93,10 @@
                 </div>
             </div>
         </div>
-        <div id="Start" class="Section Center">
+        <div id="Start" class="Section StartPage">
             <img src="data/img/arrow.svg" alt="" class="Arrow" style="-webkit-user-drag: none"/>
             <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" class="HeroContent">
+                <img src="data/img/project/empty/qtech.png" class="ProjectIcon Head" alt="">
                 <h1 class="Heading3">
                     Ultreon Team
                 </h1>
@@ -117,12 +108,12 @@
                 </a>
             </div>
         </div>
-        <div id="Downloads" class="Section">
+        <div id="Downloads" class="Section" style="padding-top: 54px">
             <div id="Project_RandomThingz" class="ProjectItem Rainbow">
                 <img src="data/img/project/random-thingz.png" width="341" sizes="200px" alt="" class="ProjectIcon">
                 <div class="ProjectContent">
                     <div class="ProjectHead">
-                        Probalbly just another random things mod
+                        Probably just another random things mod
                     </div>
                     <h2 class="ProjectName">
                         Random Thingz
@@ -131,7 +122,7 @@
                         <em class="ItalicText">
                             Probably just another random things mod. This is a mod that adds a bunch of random things,
                             such as a slime sword, earth staff, a magnet that holds RF energy and when active attracts
-                            items to the player, a more advanced debug menu, a exit confirmation menu (can be configured
+                            items to the player, a more advanced debug menu, an exit confirmation menu (can be configured
                             and disabled), a bunch of tools and weapons, traits that are on the custom tools (traits are
                             a sort of enchantments, but these can't be changed and are default for the tool / weapon
                             material).
@@ -152,7 +143,7 @@
                 </div>
             </div>
             <div id="Project_MasterWeapons" class="ProjectItem"><!--suppress HtmlUnknownTarget -->
-                <img src="data/img/project/master-weapons.png" width="386" sizes="200px" alt="Minecraft Sword of the Master Weapons Mod. Orangy red color." class="ProjectIcon"/>
+                <img src="data/img/project/master-weapons.png" width="386" sizes="200px" alt="Minecraft Sword of the Master Weapons Mod. Orangery red color." class="ProjectIcon"/>
                 <div data-w-id="cafe0045-d304-79d9-8f68-af3adaed06e9" class="ProjectContent">
                     <div class="ProjectHead">Just overpowered not enough?</div>
                     <h2 class="ProjectName">Master Weapons</h2>
@@ -170,14 +161,14 @@
                 </div>
             </div>
             <div id="Project_BubbleBlaster" class="ProjectItem">
-                <img src="data/img/project/bubble-blaster.png" width="341" alt="3 circles repesenting bubbles." class="ProjectIcon"/>
+                <img src="data/img/project/bubble-blaster.png" width="341" alt="3 circles representing bubbles." class="ProjectIcon"/>
                 <div class="ProjectContent">
                     <div class="ProjectHead">My First Game</div>
                     <h2 class="ProjectName">Bubble Blaster</h2>
                     <p class="paragraph-3"><i>
                             The first project I've ever made. A game where you need to pop bubbles for getting points,
-                            and getting higher levels how further you go, each bubble has it's own functionallity and
-                            can act different by getting different points per bubble. The bubbles have it's own
+                            and getting higher levels how further you go, each bubble has its own functionality and
+                            can act different by getting different points per bubble. The bubbles have its own
                             properties like: attack damage; defense; score; effect given, and more. Originally made in
                             Python, first made with tkinter, then using pyglet. And now made in Java with the Java AWT
                             api.
@@ -209,6 +200,9 @@
                     <a href="https://github.com/Qboi123/PyChatV2/releases/download/v2.1/PyChat.V2.1.zip" target="_blank" class="ProjectButton GenericButton">
                         Download ZIP
                     </a>
+                    <a href="https://github.com/Qboi123/PyChatV2" target="_blank" class="ProjectButton GenericButton Wide">
+                        Source Code
+                    </a>
                 </div>
                 <div class="ProjectImage"></div>
             </div>
@@ -225,6 +219,9 @@
                     <a target="_blank" class="ProjectButton GenericButton Disabled SelectOverride">
                         Coming Soon!
                     </a>
+                    <a href="https://github.com/QTechCommunity/NotepadImproved" target="_blank" class="ProjectButton GenericButton">
+                        Source Code
+                    </a>
                 </div>
                 <div class="ProjectImage"></div>
             </div>
@@ -233,7 +230,7 @@
         <div class="Footer">
             <div class="Wrap">
                 <!-- Team Name -->
-                <div><h4 class="BrandFont">Ultreon Team</h4></div>
+                <div><h4 class="BrandFont" style="font-size: 24px">Ultreon Team</h4></div>
                 <p class="Footer-Copyright">© Copyright 2021 - Ultreon Team - All rights reserved.</p>
 
                 <!-- Socials -->
@@ -251,12 +248,12 @@
                 </div>
             </div>
         </div>
-        <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6052536af668c45caed371d3" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+        <script src="data/js/jquery-3.5.1.min.js" type="text/javascript" crossorigin="anonymous">
 
         </script>
         <script src="data/js/core.js" type="text/javascript"></script>
         <!--[if lte IE 9]>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script>
         <![endif]-->
     </body>
 </html>
