Fixed page inconsistency because some stylesheets are for another page, and can therefore not be loaded.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
     <body class="Body">
         <div id="Rebuild">
             <h2>Site is being rebuilt</h2>
-            <p>Try again later, this process can take up to around 10 minutes.</p>
+            <p>
+                Try again later, this process can take up to around 10 minutes.<br>
+                Some other pages can possibly be available.
+            </p>
         </div>
         <script src="data/js/rebuild.js" rel="script" type="text/javascript" rev="script">
 
