Fix rebuild.js location.

--- a/Downloads/BubbleBlaster.html
+++ b/Downloads/BubbleBlaster.html
@@ -59,7 +59,7 @@
                 Some other pages can possibly be available.
             </p>
         </div>
-        <script rel="script" rev="script" type="text/javascript" src="../data/js/rebuild.js">
+        <script rel="script" rev="script" type="text/javascript" src="../rebuild.js">
 
         </script>
         <div class="Hero">
