--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 Some other pages can possibly be available.
             </p>
         </div>
-        <script src="data/js/rebuild.js" rel="script" type="text/javascript" rev="script">
+        <script src="rebuild.js" rel="script" type="text/javascript" rev="script">
 
         </script>
         <div id="Contents">
