Fix rebuild.js location.

--- a/Downloads/BubbleBlaster.html
+++ b/Downloads/BubbleBlaster.html
@@ -178,22 +178,106 @@
 
                 </div>
             </div>
-            <div id="OpenGL" class="ProjectItem Last">
+            <div id="PyOpenGL" class="ProjectItem">
                 <div data-w-id="cafe0045-d304-79d9-8f68-af3adaed06e9" class="ProjectContent">
-                    <div class="ProjectHead">Made with Python 3.6 • Executable</div>
-                    <h2 class="ProjectName">Original • <i>Executable</i></h2>
+                    <div class="ProjectHead">Made with Python 3.7 • Using OpenGL (pyglet)</div>
+                    <h2 class="ProjectName">OpenGL Edition</h2>
                     <p class="ProjectDescription"><i>
-                        Executable version of the original one. The portable updater can be placed everywhere, but be aware that
-                        it creates additional directories. The installer installs the portable updater in the user's app data folder.
+                        Made with Python 3.7 and OpenGL using the Python pyglet package from PyPi. This version is end
+                        of support, and will not be updated except if it's unusable. Be aware that this is an indev
+                        version and may contain game-breaking bugs.
                     </i></p>
-                    <a href="https://github.com/Qboi123/Qplay-Launcher-Updater/releases/download/1.1.0/Qplay.Bubbles.Launcher.Updater.exe" class="ProjectButton GenericButton">
-                        Portable Updater (.exe)
+                    <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha/releases/download/indev-0.1.0/Qplay.Bubbles.-.indev.0.1.0.zip" class="ProjectButton GenericButton Beta Wide">
+                        Download ZIP
                     </a>
-                    <a href="https://github.com/Qboi123/Qplay-Launcher-Updater" class="ProjectButton GenericButton">
-                        Portable Updater Source
+                    <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha/archive/refs/tags/indev-0.1.0.zip" class="ProjectButton GenericButton Beta">
+                        Source Code (Index 0.1.0)
                     </a>
-                    <a href="https://github.com/Qboi123/Qplay-Launcher-Updater/releases/download/1.1.0/QBubbles.msi" class="ProjectButton GenericButton Wide">
-                        Installer (.msi)
+                    <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha" class="ProjectButton GenericButton Beta">
+                        Source Code
+                    </a>
+                </div>
+                <div class="ProjectImage">
+
+                </div>
+            </div>
+            <div id="PyRemade" class="ProjectItem">
+                <div data-w-id="cafe0045-d304-79d9-8f68-af3adaed06e9" class="ProjectContent">
+                    <div class="ProjectHead">Made with Python 3.7+ • Remade</div>
+                    <h2 class="ProjectName">Remade • 2.0</h2>
+                    <p class="ProjectDescription"><i>
+                        Made with Python 3.7 through 3.8. This version will probably not being updated anymore.
+                    </i></p>
+                    <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha/releases/download/indev-0.1.0/Qplay.Bubbles.-.indev.0.1.0.zip" class="ProjectButton GenericButton Beta Wide">
+                        Download ZIP
+                    </a>
+                    <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha/archive/refs/tags/indev-0.1.0.zip" class="ProjectButton GenericButton Beta">
+                        Source Code (Index 0.1.0)
+                    </a>
+                    <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha" class="ProjectButton GenericButton Beta">
+                        Source Code
+                    </a>
+                </div>
+                <div class="ProjectImage">
+
+                </div>
+            </div>
+            <div id="PyReloaded" class="ProjectItem">
+                <div data-w-id="cafe0045-d304-79d9-8f68-af3adaed06e9" class="ProjectContent">
+                    <div class="ProjectHead">Made with Python 3.8 • Recreated (again)</div>
+                    <h2 class="ProjectName">Reloaded • 3.0</h2>
+                    <p class="ProjectDescription"><i>
+                        This one is made in python 3.8 and higher, based off the 2 versions before. This one has a
+                        revamped building mechanism in code. This is also the only one that's still in development. The
+                        development of the version will end when the java edition is in full release.
+                    </i></p>
+                    <p style="width: 100%; color: #a8a8a8; text-transform: uppercase; font-size: 12px; letter-spacing: 2px; margin-bottom: 0; margin-top: 12px">Installer</p>
+                    <a href="https://github.com/Qboi123/QBubblesInstaller/releases/download/1.0.0/QBubblesInstaller.exe" class="ProjectButton GenericButton Beta">
+                        Installer (.exe)
+                    </a>
+                    <a href="https://github.com/Qboi123/QBubblesInstaller" class="ProjectButton GenericButton Beta">
+                        Installer Source Code
+                    </a>
+                    <p style="width: 100%; color: #a8a8a8; text-transform: uppercase; font-size: 12px; letter-spacing: 2px; margin-bottom: 0; margin-top: 12px">Launcher</p>
+                    <a href="https://github.com/Qboi123/QBubblesLauncher/releases/download/1.0.0/QBubblesLauncher.zip" class="ProjectButton GenericButton Beta">
+                        Launcher (.zip)
+                    </a>
+                    <a href="https://github.com/Qboi123/QBubblesLauncher/tree/1.0.0" class="ProjectButton GenericButton Beta">
+                        Launcher Source Code
+                    </a>
+                    <p style="width: 100%; color: #a8a8a8; text-transform: uppercase; font-size: 12px; letter-spacing: 2px; margin-bottom: 0; margin-top: 12px">Source Code</p>
+                    <a href="https://github.com/Qboi123/QBubbles/releases/download/1.0-alpha2/QBubbles-1.0_alpha2-data.zip" class="ProjectButton GenericButton Beta">
+                        Game Data
+                    </a>
+                    <a href="https://github.com/Qboi123/QBubbles/releases/download/1.0-alpha2/QBubbles-1.0_alpha2.pyz" class="ProjectButton GenericButton Beta">
+                        Python Archive
+                    </a>
+                    <a href="https://github.com/Qboi123/QBubbles/archive/refs/tags/1.0-alpha2.zip" class="ProjectButton GenericButton Beta">
+                        Source Code (.zip)
+                    </a>
+                    <a href="https://github.com/Qboi123/QBubbles/archive/refs/tags/1.0-alpha2.tar.gz" class="ProjectButton GenericButton Beta">
+                        Source Code (.tar.gz)
+                    </a>
+                </div>
+                <div class="ProjectImage">
+
+                </div>
+            </div>
+            <div id="Java" class="ProjectItem">
+                <div data-w-id="cafe0045-d304-79d9-8f68-af3adaed06e9" class="ProjectContent">
+                    <div class="ProjectHead">Made with Java 16 • Recreated (yet again)</div>
+                    <h2 class="ProjectName">Java Edition</h2>
+                    <p class="ProjectDescription"><i>
+                        This one should be the final edition.<br>Made with Java 16, the performance of the game has been
+                        improved: during development with fps shooting up to 150 fps. Having a more advanced gameplay,
+                        full support for mods / addons, and with better gui visuals, I present to you:<br>Bubble Blaster:
+                        Java Edition.
+                    </i></p>
+                    <a class="ProjectButton GenericButton Disabled">
+                        Coming Soon!
+                    </a>
+                    <a href="https://github.com/QTechCommunity/bubble-blaster" class="ProjectButton GenericButton Beta">
+                        Source Code
                     </a>
                 </div>
                 <div class="ProjectImage">
