--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <link href="data/img/qtech-icon.png" rel="shortcut icon" type="image/x-icon"/>
         <link href="data/img/qtech-icon-256.png" rel="apple-touch-icon"/>
     </head>
-    <body class="Body">
+    <body class="Body kit-scrollbar with-arrows">
         <div id="Rebuild">
             <h2>Site is being rebuilt</h2>
             <p>
