--- a/Downloads/BubbleBlaster.html
+++ b/Downloads/BubbleBlaster.html
@@ -32,6 +32,22 @@
 
         </script>
         <![endif]-->
+        <!--suppress JSUnusedGlobalSymbols -->
+        <script rel="script" rev="script" type="text/javascript">
+            let expectedVersions = {
+                data: {
+                    css: {
+                        main: "2021.8.22.19.03",
+                        site: "2021.8.22.19.03"
+                    }
+                },
+                downloads: {
+                    bubble_blaster: "2021.8.22.19.03"
+                },
+                index: "2021.8.22.19.03"
+            };
+        </script>
+
         <!--suppress CommaExpressionJS -->
         <script type="text/javascript">
             !function (o, c) {
