--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             let expectedVersions = {
                 data: {
                     css: {
-                        main: "2021.8.22.22.30",
+                        main: "2021.8.22.23.52",
                         site: "2021.8.22.19.03"
                     }
                 },
@@ -284,5 +284,6 @@
         <!--[if lte IE 9]>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script>
         <![endif]-->
+        <p >This text will never appear on the page, isn't that weird?</p>
     </body>
 </html>
