--- a/Downloads/BubbleBlaster.html
+++ b/Downloads/BubbleBlaster.html
@@ -283,14 +283,16 @@
                 <div data-w-id="cafe0045-d304-79d9-8f68-af3adaed06e9" class="ProjectContent">
                     <div class="ProjectHead">Made with Java 16 • Recreated (yet again)</div>
                     <h2 class="ProjectName">Java Edition</h2>
-                    <p class="ProjectDescription"><i>
-                        This one should be the final edition.<br>Made with Java 16, the performance of the game has been
-                        improved: during development with fps shooting up to 150 fps. Having a more advanced gameplay,
-                        full support for mods / addons, and with better gui visuals, I present to you:<br>Bubble Blaster:
-                        Java Edition.
-                    </i></p>
-                    <a class="ProjectButton GenericButton Disabled">
-                        Coming Soon!
+                    <p class="ProjectDescription">
+                        <i>
+                            This one should be the final edition.<br>Made with Java 17 and newer versions with kotlin, the
+                            performance of the game has been improved: during development with fps shooting up to 150 fps. 
+                            Having a more advanced gameplay, full support for mods / addons, and with better gui visuals, 
+                            I present to you:<br>Bubble Blaster 4.
+                        </i>
+                    </p>
+                    <a href="https://github.com/Ultreon/bubble-blaster-launcher/releases/download/1.0.0-beta1.1/Bubble.Blaster.Launcher.zip" class="ProjectButton GenericButton Beta">
+                        Legacy Launcher
                     </a>
                     <a href="https://github.com/QTechCommunity/bubble-blaster" class="ProjectButton GenericButton Beta">
                         Source Code
