--- a/index.html
+++ b/index.html
@@ -1,72 +1,78 @@
 <!DOCTYPE html>
 <!--suppress HtmlFormInputWithoutLabel -->
 <html data-wf-page="6052536af668c417afd371d7" data-wf-site="6052536af668c45caed371d3" data-wf-status="1" lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <title>Ultreon Team Home Page</title>
-        <meta content="Apps, games, mods and other software." name="description"/>
-        <meta content="Ultreon Team Home Page"                property="og:title"/>
-        <meta content="Apps, games, mods and other software." property="og:description"/>
-        <meta content="Ultreon Team Home Page"                property="twitter:title"/>
-        <meta content="Apps, games, mods and other software." property="twitter:description"/>
-        <meta content="website"                               property="og:type"/>
-        <meta content="summary_large_image"                   name="twitter:card"/>
-        <meta content="width=device-width, initial-scale=1"   name="viewport"/>
+<head>
+    <meta charset="utf-8" />
+    <title>Ultreon Team Home Page</title>
+    <meta content="Apps, games, mods and other software." name="description" />
+    <meta content="Ultreon Team Home Page" property="og:title" />
+    <meta content="Apps, games, mods and other software." property="og:description" />
+    <meta content="Ultreon Team Home Page" property="twitter:title" />
+    <meta content="Apps, games, mods and other software." property="twitter:description" />
+    <meta content="website" property="og:type" />
+    <meta content="summary_large_image" name="twitter:card" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!--    <meta content="googled166ba55801b89ee.html"           name="google-site-verification"/>-->
 
-        <script rel="script" rev="script" type="text/javascript" src="data/js/webfont.js">
+    <script rel="script" rev="script" type="text/javascript" src="data/js/webfont.js">
+
+    </script>
+    <script src="data/js/jquery-3.5.1.min.js" type="text/javascript" crossorigin="anonymous">
+
+    </script>
+    <script rel="script" rev="script" type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js">
+
+    </script>
+    <script rel="script" rev="script" type="text/javascript">
+        WebFont.load({
+            google: {
+                families: [
+                    "Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic",
+                    "Gothic A1:300,regular,500,600,700,800"
+                ]
+            }
+        });
+    </script>
+    <!--[if lt IE 9]>
+        <script src="" type="text/javascript">
 
         </script>
-        <script rel="script" rev="script" type="text/javascript">
-            WebFont.load({
-                google: {
-                    families: [
-                        "Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic",
-                        "Gothic A1:300,regular,500,600,700,800"
-                    ]
+    <![endif]-->
+    <!--suppress JSUnusedGlobalSymbols -->
+    <script rel="script" rev="script" type="text/javascript">
+        let expectedVersions = {
+            data: {
+                css: {
+                    main: "2021.8.22.23.52",
+                    site: "2021.8.22.19.03"
                 }
-            });
-        </script>
-        <!--[if lt IE 9]>
-            <script src="" type="text/javascript">
+            },
+            downloads: {
+                bubble_blaster: "2021.8.22.19.03"
+            },
+            index: "2021.8.22.19.03"
+        };
+    </script>
 
-            </script>
-        <![endif]-->
-        <!--suppress JSUnusedGlobalSymbols -->
-        <script rel="script" rev="script" type="text/javascript">
-            let expectedVersions = {
-                data: {
-                    css: {
-                        main: "2021.8.22.23.52",
-                        site: "2021.8.22.19.03"
-                    }
-                },
-                downloads: {
-                    bubble_blaster: "2021.8.22.19.03"
-                },
-                index: "2021.8.22.19.03"
-            };
-        </script>
+    <!--suppress CommaExpressionJS -->
+    <script rel="script" rev="script" type="text/javascript">
+        !function (o, c) {
+            let n = c.documentElement, t = " w-mod-";
+            // noinspection JSUnresolvedVariable
+            n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
+        }(window, document);
+    </script>
 
-        <!--suppress CommaExpressionJS -->
-        <script rel="script" rev="script" type="text/javascript">
-            !function (o, c) {
-                let n = c.documentElement, t = " w-mod-";
-                // noinspection JSUnresolvedVariable
-                n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
-            }(window, document);
-        </script>
+    <!--  CSS Stylesheets  -->
+    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="data/css/main.css" rel="stylesheet" type="text/css" />
+    <link href="data/css/site.css" rel="stylesheet" type="text/css" />
+    <link href="data/css/rebuild.css" rel="stylesheet" type="text/css" />
 
-        <!--  CSS Stylesheets  -->
-        <link href="index.css" rel="stylesheet" type="text/css"/>
-        <link href="data/css/main.css" rel="stylesheet" type="text/css"/>
-        <link href="data/css/site.css" rel="stylesheet" type="text/css"/>
-        <link href="data/css/rebuild.css" rel="stylesheet" type="text/css"/>
-
-        <!--  Icons  -->
-        <link href="data/img/qtech-icon.png" rel="shortcut icon" type="image/x-icon"/>
-        <link href="data/img/qtech-icon-256.png" rel="apple-touch-icon"/>
-    </head>
+    <!--  Icons  -->
+    <link href="data/img/qtech-icon.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="data/img/qtech-icon-256.png" rel="apple-touch-icon" />
+</head>
     <body class="Body kit-scrollbar with-arrows">
         <div id="Rebuild">
             <h2>Site is being rebuilt</h2>
@@ -277,9 +283,6 @@
                 </div>
             </div>
         </div>
-        <script src="data/js/jquery-3.5.1.min.js" type="text/javascript" crossorigin="anonymous">
-
-        </script>
         <script src="data/js/core.js" type="text/javascript"></script>
         <!--[if lte IE 9]>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script>
