Updated CSS for download count. Updated organization links.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         let expectedVersions = {
             data: {
                 css: {
-                    main: "2021.8.22.23.52",
+                    main: "2022.5.4.18.12",
                     site: "2021.8.22.19.03"
                 }
             },
@@ -166,7 +166,7 @@
                             <a href="https://www.curseforge.com/minecraft/mc-mods/qforgemod" target="_blank" class="ProjectButton GenericButton">
                                 Download Page
                             </a>
-                            <a href="https://github.com/QTechCommunity/RandomThingz" target="_blank" class="ProjectButton GenericButton">
+                            <a href="https://github.com/Ultreon/RandomThingz" target="_blank" class="ProjectButton GenericButton">
                                 Source Code
                             </a>
                         </div>
@@ -253,7 +253,7 @@
                         <a target="_blank" class="ProjectButton GenericButton Disabled SelectOverride">
                             Coming Soon!
                         </a>
-                        <a href="https://github.com/QTechCommunity/NotepadImproved" target="_blank" class="ProjectButton GenericButton">
+                        <a href="https://github.com/Ultreon/NotepadImproved" target="_blank" class="ProjectButton GenericButton">
                             Source Code
                         </a>
                     </div>
@@ -270,14 +270,14 @@
                     <!-- Socials -->
                     <div class="Footer-List">
                         <!-- Footer prefetches -->
-                        <link rel="prefetch" href="https://github.com/QTechCommunity"/>
-                        <link rel="prefetch" href="https://github.com/QTechCommunity/RandomThingz"/>
-                        <link rel="prefetch" href="https://github.com/QTechCommunity/MasterWeapons"/>
-                        <link rel="prefetch" href="https://github.com/QTechCommunity/NotepadImproved"/>
+                        <link rel="prefetch" href="https://github.com/Ultreon"/>
+                        <link rel="prefetch" href="https://github.com/Ultreon/RandomThingz"/>
+                        <link rel="prefetch" href="https://github.com/Ultreon/MasterWeapons"/>
+                        <link rel="prefetch" href="https://github.com/Ultreon/NotepadImproved"/>
 
                         <!-- Footer links -->
                         <a href="https://discord.gg/WePT9v2CmQ" target="_blank" class="Footer-Link">Discord</a>
-                        <a href="https://github.com/QTechCommunity" class="Footer-Link">GitHub</a>
+                        <a href="https://github.com/Ultreon" class="Footer-Link">GitHub</a>
                         <a href="https://www.facebook.com/Qplay-Software-706121699827477" target="_blank" class="Footer-Link">Facebook</a>
                     </div>
                 </div>
