--- a/Downloads/BubbleBlaster.html
+++ b/Downloads/BubbleBlaster.html
@@ -43,7 +43,7 @@
         let expectedVersions = {
             data: {
                 css: {
-                    main: "2021.8.22.23.52",
+                    main: "2022.5.4.18.12",
                     site: "2021.8.22.19.03"
                 }
             },
@@ -146,11 +146,11 @@
                 <div data-w-id="cafe0045-d304-79d9-8f68-af3adaed06e9" class="ProjectContent">
                     <div class="ProjectHead">Made with Java 17 • Recreated (yet again)</div>
                     <h2 class="ProjectName">Java Edition</h2>
-                    <p id="bubble-blaster-downloads" class="ProjectDescription"></p>
+                    <p id="bubble-blaster-downloads" class="ProjectDescription DownloadCountText"></p>
                     <script>
                         var javaEditionDownloads
                         $.getJSON('https://api.github.com/repos/Ultreon/bubble-blaster-launcher/releases/assets/64471908', function (data) {
-                            document.getElementById("bubble-blaster-downloads").innerHTML = "<u><b>Downloads: <pre class=\"Download Count\">" + data.download_count.toString() + "</u></b>";
+                            document.getElementById("bubble-blaster-downloads").innerHTML = "<b>Downloads: <pre class=\"DownloadCount\">" + data.download_count.toString() + "</b>";
                             console.log(data)
                             console.log("Download count:", data["download_count"])
                             javaEditionDownloads = data
@@ -340,14 +340,14 @@
                 <!-- Socials -->
                 <div class="Footer-List">
                     <!-- Footer prefetches -->
-                    <link rel="prefetch" href="https://github.com/QTechCommunity"/>
-                    <link rel="prefetch" href="https://github.com/QTechCommunity/RandomThingz"/>
-                    <link rel="prefetch" href="https://github.com/QTechCommunity/MasterWeapons"/>
-                    <link rel="prefetch" href="https://github.com/QTechCommunity/NotepadImproved"/>
+                    <link rel="prefetch" href="https://github.com/Ultreon"/>
+                    <link rel="prefetch" href="https://github.com/Ultreon/RandomThingz"/>
+                    <link rel="prefetch" href="https://github.com/Ultreon/MasterWeapons"/>
+                    <link rel="prefetch" href="https://github.com/Ultreon/NotepadImproved"/>
 
                     <!-- Footer links -->
                     <a href="https://discord.gg/WePT9v2CmQ" target="_blank" class="Footer-Link">Discord</a>|
-                    <a href="https://github.com/QTechCommunity" class="Footer-Link">GitHub</a>|
+                    <a href="https://github.com/Ultreon" class="Footer-Link">GitHub</a>|
                     <a href="https://www.facebook.com/Qplay-Software-706121699827477" target="_blank" class="Footer-Link">Facebook</a>
                 </div>
             </div>
