Fix Bubble Blaster download links.

--- a/Downloads/BubbleBlaster.html
+++ b/Downloads/BubbleBlaster.html
@@ -189,32 +189,8 @@
                             development of the version will end when the java edition is in full release.
                         </i>
                     </p>
-                    <p style="width: 100%; color: #a8a8a8; text-transform: uppercase; font-size: 12px; letter-spacing: 2px; margin-bottom: 0; margin-top: 12px">Installer</p>
-                    <a href="https://github.com/Qboi123/QBubblesInstaller/releases/download/1.0.0/QBubblesInstaller.exe" class="ProjectButton GenericButton Beta">
-                        Installer (.exe)
-                    </a>
-                    <a href="https://github.com/Qboi123/QBubblesInstaller" class="ProjectButton GenericButton Beta">
-                        Installer Source Code
-                    </a>
-                    <p style="width: 100%; color: #a8a8a8; text-transform: uppercase; font-size: 12px; letter-spacing: 2px; margin-bottom: 0; margin-top: 12px">Launcher</p>
-                    <a href="https://github.com/Qboi123/QBubblesLauncher/releases/download/1.0.0/QBubblesLauncher.zip" class="ProjectButton GenericButton Beta">
-                        Launcher (.zip)
-                    </a>
-                    <a href="https://github.com/Qboi123/QBubblesLauncher/tree/1.0.0" class="ProjectButton GenericButton Beta">
-                        Launcher Source Code
-                    </a>
-                    <p style="width: 100%; color: #a8a8a8; text-transform: uppercase; font-size: 12px; letter-spacing: 2px; margin-bottom: 0; margin-top: 12px">Source Code</p>
-                    <a href="https://github.com/Qboi123/QBubbles/releases/download/1.0-alpha2/QBubbles-1.0_alpha2-data.zip" class="ProjectButton GenericButton Beta">
-                        Game Data
-                    </a>
-                    <a href="https://github.com/Qboi123/QBubbles/releases/download/1.0-alpha2/QBubbles-1.0_alpha2.pyz" class="ProjectButton GenericButton Beta">
-                        Python Archive
-                    </a>
-                    <a href="https://github.com/Qboi123/QBubbles/archive/refs/tags/1.0-alpha2.zip" class="ProjectButton GenericButton Beta">
-                        Source Code (.zip)
-                    </a>
-                    <a href="https://github.com/Qboi123/QBubbles/archive/refs/tags/1.0-alpha2.tar.gz" class="ProjectButton GenericButton Beta">
-                        Source Code (.tar.gz)
+                    <a class="ProjectButton Wide Disabled GenericButton">
+                        N/A
                     </a>
                 </div>
                 <div class="ProjectImage">
@@ -230,14 +206,8 @@
                             Made with Python 3.7 through 3.8. This version will probably not being updated anymore.
                         </i>
                     </p>
-                    <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha/releases/download/indev-0.1.0/Qplay.Bubbles.-.indev.0.1.0.zip" class="ProjectButton GenericButton Beta Wide">
-                        Download ZIP
-                    </a>
-                    <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha/archive/refs/tags/indev-0.1.0.zip" class="ProjectButton GenericButton Beta">
-                        Source Code (Index 0.1.0)
-                    </a>
-                    <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha" class="ProjectButton GenericButton Beta">
-                        Source Code
+                    <a class="ProjectButton Wide Disabled GenericButton">
+                        N/A
                     </a>
                 </div>
                 <div class="ProjectImage">
@@ -255,9 +225,6 @@
                             version and may contain game-breaking bugs.
                         </i>
                     </p>
-                    <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha/releases/download/indev-0.1.0/Qplay.Bubbles.-.indev.0.1.0.zip" class="ProjectButton GenericButton Beta Wide">
-                        Download ZIP
-                    </a>
                     <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha/archive/refs/tags/indev-0.1.0.zip" class="ProjectButton GenericButton Beta">
                         Source Code (Index 0.1.0)
                     </a>
@@ -284,19 +251,8 @@
                         </em>
                     </p>
                     <div class="ProjectButtons WContainer">
-                        <p style="width: 100%; color: #a8a8a8; text-transform: uppercase; font-size: 12px; letter-spacing: 2px; margin-bottom: 0; margin-top: 12px">Stable (1.4.1)</p>
-                        <a href="https://github.com/Qboi123/QplayBubbles-Releases/archive/refs/tags/v1.4.1.zip" target="_blank" class="ProjectButton GenericButton">
-                            Stable Source (.zip)
-                        </a>
-                        <a href="https://github.com/Qboi123/QplayBubbles-Releases/archive/refs/tags/v1.4.1.tar.gz" target="_blank" class="ProjectButton GenericButton">
-                            Stable Source (.tar.gz)
-                        </a>
-                        <p style="width: 100%; color: #a8a8a8; text-transform: uppercase; font-size: 12px; letter-spacing: 2px; margin-bottom: 0; margin-top: 12px">Pre Release (1.5.0 Pre Release 4)</p>
-                        <a href="https://github.com/Qboi123/QplayBubbles-Releases/archive/refs/tags/v1.5.0-pre4.zip" target="_blank" class="ProjectButton GenericButton Beta">
-                            Pre-Release Source (.zip)
-                        </a>
-                        <a href="https://github.com/Qboi123/QplayBubbles-Releases/archive/refs/tags/v1.5.0-pre4.tar.gz" target="_blank" class="ProjectButton GenericButton Beta">
-                            Pre-Release Source (.tar.gz)
+                        <a class="ProjectButton Wide Disabled GenericButton">
+                            N/A
                         </a>
                     </div>
                     <div class="ProjectSeparator"></div>
@@ -315,14 +271,8 @@
                             it creates additional directories. The installer installs the portable updater in the user's app data folder.
                         </i>
                     </p>
-                    <a href="https://github.com/Qboi123/Qplay-Launcher-Updater/releases/download/1.1.0/Qplay.Bubbles.Launcher.Updater.exe" class="ProjectButton GenericButton">
-                        Portable Updater (.exe)
-                    </a>
-                    <a href="https://github.com/Qboi123/Qplay-Launcher-Updater" class="ProjectButton GenericButton">
-                        Portable Updater Source
-                    </a>
-                    <a href="https://github.com/Qboi123/Qplay-Launcher-Updater/releases/download/1.1.0/QBubbles.msi" class="ProjectButton GenericButton Wide">
-                        Installer (.msi)
+                    <a class="ProjectButton Wide Disabled GenericButton">
+                        N/A
                     </a>
                 </div>
                 <div class="ProjectImage">
