--- a/index.html
+++ b/index.html
@@ -199,43 +199,24 @@
                     <div class="ProjectContent">
                         <div class="ProjectHead">My First Game</div>
                         <h2 class="ProjectName">Bubble Blaster</h2>
-                        <p class="paragraph-3"><i>
+                        <p class="paragraph-3">
+                            <i>
                                 The first project I've ever made. A game where you need to pop bubbles for getting points,
                                 and getting higher levels how further you go, each bubble has its own functionality and
                                 can act different by getting different points per bubble. The bubbles have its own
                                 properties like: attack damage; defense; score; effect given, and more. Originally made in
                                 Python, first made with tkinter, then using pyglet. And now made in Java with the Java AWT
                                 api.
-                        </i></p>
-                        <a href="https://github.com/Qboi123/Qplay-Launcher-Updater/releases/download/1.1.0/QBubbles.msi" target="_blank" class="ProjectButton GenericButton">
-                            Download Installer
+                            </i>
+                        </p>
+                        <a href="https://github.com/Ultreon/bubble-blaster-launcher/releases/download/updater1/Updater.exe" class="ProjectButton Wide GenericButton" download="true">
+                            Download (Updater)
                         </a>
-                        <a href="https://github.com/Qboi123/Qplay-Launcher-Updater/releases/download/1.1.0/Qplay.Bubbles.Launcher.Updater.exe" target="_blank" class="ProjectButton GenericButton">
-                            Download Updater
+                        <a href="https://github.com/Ultreon/bubble-blaster" class="ProjectButton GenericButton Beta">
+                            Sources (Base Game)
                         </a>
-                        <a href="https://github.com/Qboi123/QBubblesInstaller/releases/download/1.0.0/QBubblesInstaller.exe" target="_blank" class="ProjectButton GenericButton">
-                            Download v2.0 Installer
-                        </a>
-                        <a href="https://github.com/Qboi123/Qplay-Bubbles-Alpha/releases/download/indev-0.1.0/Qplay.Bubbles.-.indev.0.1.0.zip" target="_blank" class="ProjectButton GenericButton">
-                            Download OpenGL Edition
-                        </a>
-                    </div>
-                    <div class="ProjectImage"></div>
-                </div>
-                <div id="Project_PyChat" class="ProjectItem">
-                    <img src="data/img/project/pychat.png" width="341" alt="PyChat Icon" class="ProjectIcon"/>
-                    <div class="ProjectContent">
-                        <div class="ProjectHead">Small chat app</div>
-                        <h2 class="ProjectName">PyChat</h2>
-                        <p class="ProjectDescription"><i>Is your default chat app not small enough? We have one!</i></p>
-                        <a href="https://github.com/Qboi123/PyChatV2/releases/download/v2.1/PyChat.v2.1.exe" target="_blank" class="ProjectButton GenericButton">
-                            Download EXE
-                        </a>
-                        <a href="https://github.com/Qboi123/PyChatV2/releases/download/v2.1/PyChat.V2.1.zip" target="_blank" class="ProjectButton GenericButton">
-                            Download ZIP
-                        </a>
-                        <a href="https://github.com/Qboi123/PyChatV2" target="_blank" class="ProjectButton GenericButton Wide">
-                            Source Code
+                        <a href="https://github.com/Ultreon/bubble-blaster-launcher" class="ProjectButton GenericButton Beta">
+                            Sources (Others)
                         </a>
                     </div>
                     <div class="ProjectImage"></div>
