--- a/Downloads/BubbleBlaster.html
+++ b/Downloads/BubbleBlaster.html
@@ -43,14 +43,14 @@
         let expectedVersions = {
             data: {
                 css: {
-                    main: "2022.5.4.18.12",
-                    site: "2021.8.22.19.03"
+                    main: "2022.22.5.17.22",
+                    site: "2022.22.5.17.15"
                 }
             },
             downloads: {
-                bubble_blaster: "2021.8.22.19.03"
+                bubble_blaster: "2022.22.5.17.15"
             },
-            index: "2021.8.22.19.03"
+            index: "2022.22.5.17.15"
         };
     </script>
 
@@ -88,10 +88,10 @@
             <div data-collapse="small" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="Nav w-nav">
                 <div class="Nav-Inner">
                     <div class="Nav-LogoWrap">
-                        <a href=".." class="Brand w-nav-brand">
+                        <a href="../index.html" class="Brand w-nav-brand">
                             <div class="BrandBlock">
                                 <div class="BrandText">
-                                    <img src="../data/img/brand/brand-icon-1.png" loading="eager" height="48" width="48" alt="" class="BrandIcon"/>
+                                    <img src="../data/img/brand/brand-icon-1.png" loading="eager" height="48" width="48" alt="" class="BrandIcon" />
                                     Ultreon
                                 </div>
                             </div>
@@ -129,7 +129,7 @@
         <div id="Start" class="Section StartPage BubbleBlaster">
             <img src="../data/img/arrow.svg" alt="" class="Arrow" style="-webkit-user-drag: none"/>
             <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" class="HeroContent">
-                <img src="../data/img/project/empty/bubble-blaster.png" class="ProjectIcon Head" alt="">
+                <img src="../data/img/project/empty/bubble-blaster-v4.0.png" class="ProjectIcon Head" alt="">
                 <h1 class="Heading3">
                     Bubble Blaster
                 </h1>
