--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         let expectedVersions = {
             data: {
                 css: {
-                    main: "2022.5.4.18.12",
-                    site: "2021.8.22.19.03"
+                    main: "2022.22.5.17.22",
+                    site: "2022.22.5.17.15"
                 }
             },
             downloads: {
-                bubble_blaster: "2021.8.22.19.03"
+                bubble_blaster: "2022.22.5.17.15"
             },
-            index: "2021.8.22.19.03"
+            index: "2022.22.5.17.15"
         };
     </script>
 
@@ -130,7 +130,7 @@
             <div id="Start" class="Section StartPage">
                 <img src="data/img/arrow.svg" alt="" class="Arrow" style="-webkit-user-drag: none"/>
                 <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" class="HeroContent">
-                    <img src="data/img/project/empty/qtech.png" class="ProjectIcon Head" alt="">
+                    <img src="data/img/project/empty/ultreon-v4.0.png" class="ProjectIcon Head" alt="">
                     <h1 class="Heading3">
                         Ultreon Team
                     </h1>
@@ -144,7 +144,7 @@
             </div>
             <div id="Downloads" class="Section" style="padding-top: 54px">
                 <div id="Project_RandomThingz" class="ProjectItem Rainbow">
-                    <img src="data/img/project/random-thingz.png" width="341" sizes="200px" alt="" class="ProjectIcon">
+                    <img src="data/img/project/random-thingz-v4.0.png" width="341" sizes="200px" alt="" class="ProjectIcon">
                     <div class="ProjectContent">
                         <div class="ProjectHead">
                             Probably just another random things mod
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <div id="Project_BubbleBlaster" class="ProjectItem">
-                    <img src="data/img/project/bubble-blaster.png" width="341" alt="3 circles representing bubbles." class="ProjectIcon"/>
+                    <img src="data/img/project/bubble-blaster-v4.0.png" width="341" alt="3 circles representing bubbles." class="ProjectIcon"/>
                     <div class="ProjectContent">
                         <div class="ProjectHead">My First Game</div>
                         <h2 class="ProjectName">Bubble Blaster</h2>
@@ -222,7 +222,7 @@
                     <div class="ProjectImage"></div>
                 </div>
                 <div id="Project_NotepadImproved" class="ProjectItem Last">
-                    <img src="data/img/project/notepad-improved.png" width="341" alt="PyChat Icon" class="ProjectIcon"/>
+                    <img src="data/img/project/notepad-improved-v4.0.png" width="341" alt="PyChat Icon" class="ProjectIcon"/>
                     <div class="ProjectContent">
                         <div class="ProjectHead">Notepad but better</div>
                         <h2 class="ProjectName">Notepad Improved</h2>
