Fix branding icon, tweaked border radius.

--- a/Downloads/BubbleBlaster.html
+++ b/Downloads/BubbleBlaster.html
@@ -70,8 +70,8 @@
     <link href="../data/css/rebuild.css" rel="stylesheet" type="text/css" />
 
     <!--  Icons  -->
-    <link href="../data/img/qtech-icon.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="../data/img/qtech-icon-256.png" rel="apple-touch-icon" />
+    <link href="../data/img/ultreon-favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="../data/img/ultreon-256.png" rel="apple-touch-icon" />
 </head>
     <body class="Body">
         <div id="Rebuild">
