Uhm, another fix lol.

--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
                                 api.
                             </i>
                         </p>
-                        <a href="https://gitlab.com/ultreon/bubble-blaster-launcher/releases/download/updater1/Updater.exe" class="ProjectButton Wide GenericButton" download="true">
+                        <a href="https://github.com/Ultreon/bubble-blaster-launcher/releases/download/updater1/Updater.exe" class="ProjectButton Wide GenericButton" download="true">
                             Download (Updater)
                         </a>
                         <a href="https://gitlab.com/ultreon/bubble-blaster" class="ProjectButton GenericButton Beta">
                             Sources (Base Game)
                         </a>
-                        <a href="https://gitlab.com/ultreon/bubble-blaster-launcher" class="ProjectButton GenericButton Beta">
+                        <a href="https://github.com/Ultreon/bubble-blaster-launcher" class="ProjectButton GenericButton Beta">
                             Sources (Others)
                         </a>
                     </div>
