Fix font for license

--- a/licenses/small-utilities.html
+++ b/licenses/small-utilities.html
@@ -1,6 +1,11 @@
 <html>
     <head>
         <title>Small Utilities License v1.1</title>
+        <style>
+            * {
+                font-family: Arial, Helvetica, sans-serif;
+            }
+        </style>
     </head>
     <body>
         <p><b>Copyright (c) 2022 - Qboi<br>
