--- a/hello/index.html
+++ b/hello/index.html
@@ -1,1 +1,3 @@
-<iframe width="640" height="360" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" title="Hello" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<script>
+window.location.replace("https://www.youtube.com/embed/dQw4w9WgXcQ");
+</script>
