--- a/hello/index.html
+++ b/hello/index.html
@@ -1,3 +1,3 @@
 <script>
-window.location.replace("https://www.youtube.com/watch?v=LLFhKaqnWwk");
+window.location.href = "https://www.youtube.com/watch?v=LLFhKaqnWwk";
 </script>
