--- a/hello/index.html
+++ b/hello/index.html
@@ -1,3 +1,18 @@
-<script>
-window.location.href = "https://www.youtube.com/watch?v=LLFhKaqnWwk";
-</script>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Ultreon Team Home Page</title>
+    <meta content="Apps, games, mods and other software." name="description">
+    <meta content="Ultreon Team Home Page" property="og:title">
+    <meta content="Apps, games, mods and other software." property="og:description">
+    <meta content="Ultreon Team Home Page" property="twitter:title">
+    <meta content="Apps, games, mods and other software." property="twitter:description">
+    <meta content="website" property="og:type">
+    <meta content="summary_large_image" name="twitter:card">
+  </head>
+  <body>
+    <script>
+      window.location = "https://www.youtube.com/watch?v=LLFhKaqnWwk";
+    </script>
+  </body>
+</html>
