--- a/projects/random-thingz/BubbleBlaster.html
+++ b/projects/random-thingz/BubbleBlaster.html
@@ -136,7 +136,7 @@
                 <h3 class="Hero-SubHead">
                     A game about a ship that pops bubbles deep in the sea.
                 </h3>
-                <a href="#Downloads" class="GradientButton GenericButton">
+                <a href="#Downloads" class="StartButton GenericButton">
                     Go to downloads
                 </a>
             </div>
