Update copyright and footer links.

--- a/index.html
+++ b/index.html
@@ -329,20 +329,17 @@
                 <div class="Wrap">
                     <!-- Team Name -->
                     <div><h4 class="BrandFont" style="font-size: 24px">Ultreon Team</h4></div>
-                    <p class="Footer-Copyright">© Copyright 2021 - Ultreon Team - All rights reserved.</p>
+                    <p class="Footer-Copyright">© Copyright 2023 - Ultreon Team. All rights reserved.</p>
 
                     <!-- Socials -->
                     <div class="Footer-List">
                         <!-- Footer prefetches -->
                         <link rel="prefetch" href="https://github.com/Ultreon"/>
-                        <link rel="prefetch" href="https://github.com/Ultreon/RandomThingz"/>
-                        <link rel="prefetch" href="https://github.com/Ultreon/MasterWeapons"/>
-                        <link rel="prefetch" href="https://github.com/Ultreon/NotepadImproved"/>
 
                         <!-- Footer links -->
-                        <a href="https://discord.gg/WePT9v2CmQ" target="_blank" class="Footer-Link">Discord</a>
+                        <a href="https://discord.gg/sQsU7sE2Sx" target="_blank" class="Footer-Link">Discord</a>
                         <a href="https://github.com/Ultreon" class="Footer-Link">GitHub</a>
-                        <a href="https://www.facebook.com/Qplay-Software-706121699827477" target="_blank" class="Footer-Link">Facebook</a>
+                        <a href="https://youtube.com/@ultreon" target="_blank" class="Footer-Link">YouTube</a>
                     </div>
                 </div>
             </div>
